istio/example/oscon-demo/security-talk/istio/keycloak-virtualservice-for-customer.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: customer
spec:
  hosts:
  - "*"
  gateways:
  - default-gateway
  http:
  - match:
      - uri:
          prefix: /auth
    route:
    - destination:
        host: keycloak
        port:
          number: 8080
  - route:
    - destination:
        host: customer
        port:
          number: 8080
