istio/example/oscon-demo/security-talk/istio/recommendation-service-v1-v2-70-30.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: recommendation
  namespace: tutorial
spec:
  hosts:
  - recommendation
  http:
  - route:
    - destination:
        host: recommendation
        subset: version-v1
      weight: 70
    - destination:
        host: recommendation
        subset: version-v2
      weight: 30
